Digital/objects/Placement_KOD__c.object
<CustomObject>
    <label>Placement&amp;KOD</label>
    <nameField>
        <displayFormat>L&amp;K{00000}</displayFormat>
        <label>Layout&amp;KOD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placements&amp;KODs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>KOD__c</fullName>
        <label>KOD</label>
        <referenceTo>KOD__c</referenceTo>
        <relationshipName>Layouts_KODs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Placement_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Content</label>
        <referenceTo>Placement_Content__c</referenceTo>
        <relationshipLabel>Placements&amp;KODs</relationshipLabel>
        <relationshipName>Layouts_KODs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Library__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Library</label>
        <referenceTo>Placement_Library__c</referenceTo>
        <relationshipLabel>Placements&amp;KODs</relationshipLabel>
        <relationshipName>Placements_KODs</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>